--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -9,7 +9,7 @@
 
 <div class='row'>
     <div class='col-xs-12'>    
-        <%= form_for @article do |f| %>
+        <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
         <div class='form-group'>
             <div class='control-label col-sm-2'>
                 <%= f.label :title %>
@@ -28,12 +28,13 @@
             </div>
                 
             <div class="form-group">
-                <div class="col-sm-10">
+                <div class="col-sm-offset-2 col-sm-10">
                     <%= f.submit class: 'btn btn-primary btn-lg' %>
                 </div>
             </div>
-            
-        <%= link_to 'Back to article listing page', articles_path%>
-        <% end %>
+            <% end %>
+          <div class="col-xs-4 col-xs-offset-4">  
+            [ <%= link_to 'Cancel request and return to article listing page', articles_path%> ]
+          </div>
     </div>
 </div>
