--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -72,6 +72,12 @@ $navbar-default-bg: #000000;
     padding-bottom: 15px;
 }
 
+.listing
+{
+    list-style: none;
+    padding-left: 0;
+}
+
 footer
 {
     margin-top: 45px;
